force-app/main/default/objects/custom_create361__c/custom_create361__c.object-meta.xml
<CustomObject>
    <label>Custom created object361</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects361</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>