force-app/main/default/objects/custom_create361__c/fields/custom_create_361field531__c.field-meta.xml
<CustomField>
    <fullName>custom_create_361field531__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 361field531</label>
    <type>Checkbox</type>
</CustomField>